WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202554
Fix testmasm failure on ASan builds.
https://bugs.webkit.org/show_bug.cgi?id=202554
Summary
Fix testmasm failure on ASan builds.
Mark Lam
Reported
2019-10-03 17:55:49 PDT
Gigacage is disabled on ASan builds. So testmasm is sad. Make the relevant test bail gracefully if Gigacage should be disabled.
Attachments
proposed patch.
(2.43 KB, patch)
2019-10-03 18:01 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
proposed patch.
(2.58 KB, patch)
2019-10-03 18:03 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2019-10-03 18:01:54 PDT
Created
attachment 380173
[details]
proposed patch.
Mark Lam
Comment 2
2019-10-03 18:03:04 PDT
Created
attachment 380174
[details]
proposed patch.
Yusuke Suzuki
Comment 3
2019-10-03 18:06:24 PDT
Comment on
attachment 380174
[details]
proposed patch. r=me
WebKit Commit Bot
Comment 4
2019-10-03 18:26:33 PDT
Comment on
attachment 380174
[details]
proposed patch. Clearing flags on attachment: 380174 Committed
r250695
: <
https://trac.webkit.org/changeset/250695
>
WebKit Commit Bot
Comment 5
2019-10-03 18:26:34 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-10-03 18:27:18 PDT
<
rdar://problem/55969676
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug