Fix testmasm failure on ASan builds. https://bugs.webkit.org/show_bug.cgi?id=202554

Reviewed by Yusuke Suzuki.

Gigacage is disabled on ASan builds.  So testmasm is sad.  Make the relevant test
bail gracefully if Gigacage should be disabled.

Also converted some ASSERTs into RELEASE_ASSERTs.  This is a test.  No reason to
not assert always.

* assembler/testmasm.cpp:
(JSC::testCagePreservesPACFailureBit):


Canonical link: https://commits.webkit.org/216036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250695 268f45cc-cd09-0410-ab3c-d52691b4dbfc